Add gui settings and moon tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emma Walsh - About me</title>
+    <title>Dark Side of the Moon</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
